--- a/.github/workflows/create_s3_bucket.yaml
+++ b/.github/workflows/create_s3_bucket.yaml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch:  # Allows manual triggering of the workflow
+  workflow_dispatch:  
 
 jobs:
   terraform:
@@ -31,7 +31,7 @@ jobs:
       run: terraform plan
 
     - name: Terraform Apply
-      if: github.event_name == 'workflow_dispatch'  # Only run apply on manual trigger
+      if: github.event_name == 'workflow_dispatch' 
       env:
         TF_VAR_github_token: ${{ secrets.SECRET_TOKEN }}
         TF_VAR_github_webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
