--- a/.github/workflows/apply_full_config.yaml
+++ b/.github/workflows/apply_full_config.yaml
@@ -22,10 +22,15 @@ jobs:
       uses: hashicorp/setup-terraform@v1
 
     - name: Terraform Init
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: terraform init -migrate-state
 
     - name: Terraform Plan
       env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TF_VAR_github_token: ${{ secrets.SECRET_TOKEN }}
         TF_VAR_github_webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
       run: terraform plan
@@ -33,6 +38,8 @@ jobs:
     - name: Terraform Apply
       if: github.event_name == 'workflow_dispatch'  # Only run apply on manual trigger
       env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TF_VAR_github_token: ${{ secrets.SECRET_TOKEN }}
         TF_VAR_github_webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
       run: terraform apply -auto-approve
