--- a/.github/workflows/create_s3_bucket.yaml
+++ b/.github/workflows/create_s3_bucket.yaml
@@ -20,10 +20,14 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        TF_VAR_github_token: ${{ secrets.SECRET_TOKEN }}
+        TF_VAR_github_webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
       run: terraform init
 
     - name: Terraform Apply
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        TF_VAR_github_token: ${{ secrets.SECRET_TOKEN }}
+        TF_VAR_github_webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
       run: terraform apply -auto-approve
