--- a/.github/workflows/apply_full_config.yaml
+++ b/.github/workflows/apply_full_config.yaml
@@ -31,6 +31,12 @@ jobs:
         aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
         aws configure set region eu-north-1
 
+    - name: Update Kubeconfig
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: aws eks update-kubeconfig --name atlantis-eks
+
     - name: Test AWS CLI
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -41,8 +47,7 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        kubectl get nodes
+      run: kubectl get nodes
 
     - name: Terraform Init
       env:
