--- a/.github/workflows/apply_full_config.yaml
+++ b/.github/workflows/apply_full_config.yaml
@@ -35,13 +35,13 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: aws eks update-kubeconfig --name atlantis-eks
+      run: aws eks update-kubeconfig --name ATLANTIS-EKS
 
     - name: Test AWS CLI
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: aws eks get-token --cluster-name atlantis-eks
+      run: aws eks get-token --cluster-name ATLANTIS-EKS
 
     - name: Test Kubernetes Connection
       env:
